# target-s3-jsonl

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
target_s3_jsonl/: __init__.py  sinks.py  target.py
target_s3_jsonl/tests/: __init__.py  test_core.py  test_sinks.py
