[tool.poetry]
name = "target-s3-jsonl"
version = "0.0.1"
description = "`target-s3-jsonl` is a Singer target for s3-jsonl, built with the Meltano Singer SDK."
authors = ["harrystech"]
keywords = [
    "ELT",
    "s3-jsonl",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.13.0"
boto3 = "^1.26.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
moto = {extras = ["s3"], version = "^4.0.9"}

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_s3_jsonl"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3-jsonl = 'target_s3_jsonl.target:Targets3-jsonl.cli'
